--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             <div>
                 <a href="#">
                     <h2 class="font-semibold text-white text-[26px] font-['poppins']">chat<span
-                            class="font-[275]">app</span></h2>
+                            class="font-[275]">app</span>
+                    </h2>
                 </a>
             </div>
             <ul id="mobile_navbar"
-                class="flex gap-6 items-center lg:relative fixed max-lg:w-full  max-lg:translate-x-full  left-0 top-0 max-lg:flex-col max-lg:justify-center max-lg:items-center">
+                class="flex gap-6 items-center lg:relative fixed max-lg:w-full max-md:h-full max-lg:bg-yellow-500 z-10 max-lg:translate-x-full left-0 top-0 max-lg:flex-col max-lg:justify-center max-lg:items-center">
                 <li><a href="#" class="font-medium text-white text-sm font-['Roboto']">Product</a></li>
                 <li><a href="#" class="font-medium text-white text-sm font-['Roboto']">Services</a></li>
                 <li><a href="#" class="font-medium text-white text-sm font-['Roboto']">Contact</a></li>
@@ -29,10 +30,10 @@
                         It Free</button></li>
             </ul>
             <div class="relative z-20 flex gap-x-4 lg:hidden">
-                <div class="relative size-8 rounded-full " id="toggle_button">
-                    <div class="absolute h-full w-full bg-transparent border transition-all duration-300 left-0 show_nav"></div>
-                    <div
-                        class="absolute h-full w-full bg-red-500 transition-all duration-300 left-0 close_nav opacity-0">
+                <div class="relative size-8 rounded-[100px]" id="toggle_button">
+                    <div class="absolute h-full w-full bg-transparent border transition-all duration-300 show_nav">
+                    </div>
+                    <div class="absolute h-full w-full bg-red-500 transition-all duration-300 close_nav opacity-0">
                     </div>
                 </div>
             </div>
@@ -48,7 +49,6 @@
                 nav.classList.toggle("max-lg:translate-x-full")
                 toggleButtonShowNav.classList.toggle("opacity-0")
                 toggleButtonCloseNav.classList.toggle("opacity-0")
-                nav.classList.toggle("max-lg:translate-x-full")
                 console.log("nav")
             }
         )
